Replace lerna with npm workspaces (#6136)
- Replaces lerna with npm workspaces
- Updates all scripts and workflows to be compatible
- Updates several dependencies to resolve conflicts

--- a/.github/workflows/beachball-check.yml
+++ b/.github/workflows/beachball-check.yml
@@ -41,10 +41,12 @@ jobs:
             - name: Use Node.js
               if: ${{ steps.filter.outputs.lib == 'true' }}
               uses: actions/setup-node@v3
+              with:
+                node-version: 18
 
             - name: Install beachball
               if: ${{ steps.filter.outputs.lib == 'true' }}
-              run: npm ci
+              run: npm ci --workspaces=false
 
             - name: Run Beachball Check command
               if: ${{ steps.filter.outputs.lib == 'true' }}
