--- a/lib/msal-angular/package.json
+++ b/lib/msal-angular/package.json
@@ -17,10 +17,9 @@
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --configuration production",
-    "build:all": "npm run build:common && npm run build:browser && npm run build",
-    "build:all:prod": "npm run build:common && npm run build:browser && npm run build:prod",
-    "build:browser": "cd ../msal-browser && npm run build",
-    "build:common": "cd ../msal-common && npm run build",
+    "build:all": "npm run build:browser && npm run build",
+    "build:all:prod": "npm run build:browser && npm run build:prod",
+    "build:browser": "cd ../.. && npm run build --workspace=@azure/msal-common --workspace=@azure/msal-browser",
     "build:pack": "npm run build && cd dist && npm pack",
     "deploy": "npm run build:all:prod && npm publish ./dist",
     "deploy:beta": "npm run build:all:prod && npm publish ./dist --tag beta",
@@ -30,7 +29,6 @@
     "lint:fix": "npm run lint -- -- --fix",
     "e2e": "ng e2e",
     "prepack": "npm run build:all",
-    "link:localDeps": "npx lerna@6 bootstrap --scope @azure/msal-common --scope @azure/msal-browser --scope @azure/msal-angular",
     "prepublishOnly": "echo Use npm run deploy && exit 1",
     "format:check": "npx prettier --ignore-path .gitignore --check src",
     "format:fix": "npx prettier --ignore-path .gitignore --write src"
