--- a/samples/msal-angular-v3-samples/angular15-sample-app/tsconfig.json
+++ b/samples/msal-angular-v3-samples/angular15-sample-app/tsconfig.json
@@ -27,6 +27,9 @@
     "paths": {
       "@angular/*": [
         "./node_modules/@angular/*"
+      ],
+      "@azure/msal-angular": [
+        "../../../node_modules/@azure/msal-angular/dist"
       ]
     },
     "types": [
