--- a/.github/workflows/beachball-bump.yml
+++ b/.github/workflows/beachball-bump.yml
@@ -34,9 +34,11 @@ jobs:
       # Install node_modules
       - name: Use Node.js
         uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
       - name: Install beachball
-        run: npm ci
+        run: npm ci --workspaces=false
 
       # Beachball bump
       - name: bump package versions
