--- a/.github/workflows/ci-template.yml
+++ b/.github/workflows/ci-template.yml
@@ -34,22 +34,10 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 20
+        cache: 'npm'
 
-    - name: Restore node_modules
-      uses: actions/cache@v3
-      id: cache
-      with:
-        path: |
-          node_modules
-          lib/*/node_modules
-          extensions/*/node_modules
-        key: ${{ runner.os }}-${{ hashFiles('package-lock.json', 'lib/*/package-lock.json', 'extensions/*/package-lock.json') }}
-
-    - name: Clean Install
-      if: steps.cache.outputs.cache-hit != 'true'
-      env:
-        RUNNING_NODE_CI: 1
-      run: npm ci
+    - name: Install Dependencies
+      run: npm ci --workspace=${{ inputs.path }}/${{ inputs.lib-name }} --include-workspace-root
 
     - name: Upload npm logs
       uses: actions/upload-artifact@v3
