--- a/.github/workflows/msal-angular-e2e.yml
+++ b/.github/workflows/msal-angular-e2e.yml
@@ -47,26 +47,15 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-          node-version: 16
+          node-version: 18
+          cache: 'npm'
 
     - name: Clean Install
-      env:
-        RUNNING_NODE_CI: 1
-      run: npm ci
+      run: npm ci --workspace=samples/msal-angular-v3-samples/${{matrix.sample}}
 
     - name: Build packages
       working-directory: lib/msal-angular
       run: npm run build:all
-
-    - name: Install Test Tools
-      working-directory: samples/e2eTestUtils
-      run: npm install
-
-    - name: Install ${{ matrix.sample }}
-      working-directory: samples/msal-angular-v3-samples/${{ matrix.sample }}
-      run: |
-        npm run install:local
-        npm install
 
     - name: Build ${{ matrix.sample }}
       working-directory: samples/msal-angular-v3-samples/${{ matrix.sample }}
