--- a/.github/workflows/msal-node-e2e.yml
+++ b/.github/workflows/msal-node-e2e.yml
@@ -8,13 +8,13 @@ on:
   pull_request:
     types: [opened, reopened, synchronize, ready_for_review]
     paths:
-      - 'lib/msal-node/**/*'
-      - 'lib/msal-common/**/*'
-      - 'samples/msal-node-samples/**/*'
-      - 'samples/e2eTestUtils/**/*'
-      - 'samples/package-lock.json'
-      - '!**.md'
-      - '.github/workflows/msal-node-e2e.yml'
+      - "lib/msal-node/**/*"
+      - "lib/msal-common/**/*"
+      - "samples/msal-node-samples/**/*"
+      - "samples/e2eTestUtils/**/*"
+      - "samples/package-lock.json"
+      - "!**.md"
+      - ".github/workflows/msal-node-e2e.yml"
   merge_group:
     types: [checks_requested]
 
@@ -32,90 +32,54 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: [ 18, 20 ]
+        node: [18, 20]
         sample:
-          - 'auth-code'
-          - 'client-credentials'
-          - 'device-code'
-          - 'silent-flow'
-          - 'b2c-user-flows'
-          - 'on-behalf-of'
+          - "auth-code"
+          - "client-credentials"
+          - "device-code"
+          - "silent-flow"
+          - "b2c-user-flows"
+          - "on-behalf-of"
 
     name: ${{ matrix.sample }} - Node v${{ matrix.node }}
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node }}
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node }}
+          cache: 'npm'
 
-    - name: Restore node_modules for libs
-      uses: actions/cache@v3
-      id: lib-cache
-      with:
-        path: |
-          node_modules
-          lib/msal-common/node_modules
-          lib/msal-node/node_modules
-        key: ${{ runner.os }}-node-e2e-${{matrix.node}}-${{ hashFiles('package-lock.json', 'lib/msal-common/package-lock.json', 'lib/msal-node/package-lock.json') }}
+      - name: Clean Install
+        run: npm ci --workspace=samples/msal-node-samples/${{matrix.sample}} --ignore-engines
 
-    - name: Clean Install
-      if: steps.lib-cache.outputs.cache-hit != 'true'
-      run: npm ci --ignore-scripts
+      - name: Build Package
+        working-directory: samples/msal-node-samples/${{matrix.sample}}
+        run: npm run build:package
 
-    - name: Link local packages
-      run: npx lerna --scope @azure/msal-node --scope @azure/msal-common bootstrap
+      - name: E2E Tests
+        working-directory: samples/msal-node-samples/${{ matrix.sample }}
+        timeout-minutes: 10
+        env:
+          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          OBO_WEB_APP_CLIENT_ID: ${{ secrets.OBO_WEB_APP_CLIENT_ID }}
+          OBO_WEB_APP_CLIENT_SECRET: ${{ secrets.OBO_WEB_APP_CLIENT_SECRET }}
+          OBO_WEB_API_CLIENT_ID: ${{ secrets.OBO_WEB_API_CLIENT_ID }}
+          OBO_WEB_API_CLIENT_SECRET: ${{ secrets.OBO_WEB_API_CLIENT_SECRET }}
+          OBO_WEB_API_SCOPE: ${{ secrets.OBO_WEB_API_SCOPE }}
+          OBO_WEB_API_TENANT_ID: ${{ secrets.OBO_WEB_API_TENANT_ID }}
+        run: npm test
 
-    - name: Build Package
-      working-directory: lib/msal-node
-      run: npm run build:all
-
-    - name: Install Test Tools
-      if: steps.test-tools-cache.outputs.cache-hit != 'true'
-      working-directory: samples/e2eTestUtils
-      run: npm install
-
-    - name: Restore node_modules for sample
-      uses: actions/cache@v3
-      id: sample-cache
-      with:
-        path: samples/msal-node-samples/${{ matrix.sample }}/node_modules
-        key: ${{ runner.os }}-node-e2e-${{ matrix.sample }}-${{ matrix.node }}-${{ hashFiles(format('samples/msal-node-samples/{0}/package.json', matrix.sample), 'samples/package-lock.json') }}
-
-    - name: Install msal-node-samples packages
-      working-directory: samples/msal-node-samples
-      run: npm i
-
-    - name: Install Sample
-      if: steps.sample-cache.outputs.cache-hit != 'true'
-      working-directory: samples/msal-node-samples/${{ matrix.sample }}
-      run: |
-        npm run install:local
-        npm install
-
-    - name: E2E Tests
-      working-directory: samples/msal-node-samples/${{ matrix.sample }}
-      timeout-minutes: 10
-      env:
-        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-        OBO_WEB_APP_CLIENT_ID: ${{ secrets.OBO_WEB_APP_CLIENT_ID }}
-        OBO_WEB_APP_CLIENT_SECRET: ${{ secrets.OBO_WEB_APP_CLIENT_SECRET }}
-        OBO_WEB_API_CLIENT_ID: ${{ secrets.OBO_WEB_API_CLIENT_ID }}
-        OBO_WEB_API_CLIENT_SECRET: ${{ secrets.OBO_WEB_API_CLIENT_SECRET }}
-        OBO_WEB_API_SCOPE: ${{ secrets.OBO_WEB_API_SCOPE }}
-        OBO_WEB_API_TENANT_ID: ${{ secrets.OBO_WEB_API_TENANT_ID }}
-      run: npm test
-
-    - name: Upload E2E Test Screenshots
-      uses: actions/upload-artifact@v3
-      if: failure()
-      with:
-        name: e2e-test-screenshots
-        path: samples/**/screenshots
+      - name: Upload E2E Test Screenshots
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: e2e-test-screenshots
+          path: samples/**/screenshots
 
   run-electron-e2e:
     if: (github.repository == 'AzureAD/microsoft-authentication-library-for-js') && (github.actor != 'dependabot[bot]') && ((github.event.pull_request.head.repo.full_name == github.repository) || (github.event_name == 'merge_group')) && !github.event.pull_request.draft
@@ -125,82 +89,48 @@ jobs:
       matrix:
         os: [windows-latest, macos-latest]
         sample:
-          - 'ElectronSystemBrowserTestApp'
+          - "ElectronSystemBrowserTestApp"
 
     name: ${{ matrix.sample }} - ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Use Node.js
-      uses: actions/setup-node@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'npm'
 
-    - name: Restore node_modules for libs
-      uses: actions/cache@v3
-      id: lib-cache
-      with:
-        path: |
-          node_modules
-          lib/msal-common/node_modules
-          lib/msal-node/node_modules
-        key: ${{ runner.os }}-node-electron-e2e-${{ hashFiles('package-lock.json', 'lib/msal-common/package-lock.json', 'lib/msal-node/package-lock.json') }}
+      - name: Clean Install
+        run: npm ci --workspace=samples/msal-node-samples/${{matrix.sample}} --ignore-engines
 
-    - name: Clean Install
-      if: steps.lib-cache.outputs.cache-hit != 'true'
-      run: npm ci
+      - name: Build Package
+        working-directory: samples/msal-node-samples/${{matrix.sample}}
+        run: npm run build:package
 
-    - name: Build Package
-      working-directory: lib/msal-node
-      run: npm run build:all
+      - name: Install Playwright
+        working-directory: samples/msal-node-samples/${{ matrix.sample }}
+        run: npx playwright install
 
-    - name: Install Test Tools
-      if: steps.test-tools-cache.outputs.cache-hit != 'true'
-      working-directory: samples/e2eTestUtils
-      run: npm install
-      env:
-        PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
-        PLAYWRIGHT_BROWSERS_PATH: 0
+      - name: Build Sample
+        working-directory: samples/msal-node-samples/${{ matrix.sample }}
+        run: |
+          npm run build
 
-    - name: Restore node_modules for sample
-      uses: actions/cache@v3
-      id: sample-cache
-      with:
-        path: samples/msal-node-samples/${{ matrix.sample }}/node_modules
-        key: ${{ runner.os }}-electron-e2e-${{ matrix.sample }}-${{ hashFiles(format('samples/msal-node-samples/{0}/package.json', matrix.sample), 'samples/package-lock.json') }}
+      - name: E2E Tests
+        working-directory: samples/msal-node-samples/${{ matrix.sample }}
+        timeout-minutes: 10
+        env:
+          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          DEBUG: pw:browser
+        run: npm test
 
-    - name: Install msal-node-samples packages
-      working-directory: samples/msal-node-samples
-      run: npm i
-
-    - name: Install Sample
-      if: steps.sample-cache.outputs.cache-hit != 'true'
-      working-directory: samples/msal-node-samples/${{ matrix.sample }}
-      run: |
-        npm run install:local
-        npm install
-
-    - name: Install Playwright
-      working-directory: samples/msal-node-samples/${{ matrix.sample }}
-      run: npx playwright install
-
-    - name: Build Sample
-      working-directory: samples/msal-node-samples/${{ matrix.sample }}
-      run: |
-        npm run build
-
-    - name: E2E Tests
-      working-directory: samples/msal-node-samples/${{ matrix.sample }}
-      timeout-minutes: 10
-      env:
-        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-        DEBUG: pw:browser
-      run: npm test
-
-    - name: Upload E2E Test Screenshots
-      uses: actions/upload-artifact@v3
-      if: failure()
-      with:
-        name: e2e-test-screenshots
-        path: samples/**/screenshots
+      - name: Upload E2E Test Screenshots
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: e2e-test-screenshots
+          path: samples/**/screenshots
