--- a/.github/workflows/msal-react-e2e.yml
+++ b/.github/workflows/msal-react-e2e.yml
@@ -49,45 +49,15 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 16
-
-    - name: Restore node_modules for libs
-      uses: actions/cache@v3
-      id: lib-cache
-      with:
-        path: |
-          node_modules
-          lib/*/node_modules
-        key: ${{ runner.os }}-${{ hashFiles('package-lock.json', 'lib/*/package-lock.json') }}
+        node-version: 18
+        cache: 'npm'
 
     - name: Clean Install
-      if: steps.lib-cache.outputs.cache-hit != 'true'
-      env:
-        RUNNING_NODE_CI: 1
-      run: npm ci
+      run: npm ci --workspace=samples/msal-react-samples/${{matrix.sample}}
 
     - name: Build packages
       working-directory: lib/msal-react
       run: npm run build:all
-
-    - name: Install Test Tools
-      if: steps.test-tools-cache.outputs.cache-hit != 'true'
-      working-directory: samples/e2eTestUtils
-      run: npm install
-
-    - name: Restore node_modules for sample
-      uses: actions/cache@v3
-      id: sample-cache
-      with:
-        path: samples/msal-react-samples/${{ matrix.sample }}/node_modules
-        key: ${{ runner.os }}-react-e2e-${{ hashFiles(format('samples/msal-react-samples/{0}/package.json', matrix.sample), 'samples/package-lock.json') }}
-
-    - name: Install ${{ matrix.sample }}
-      if: steps.sample-cache.outputs.cache-hit != 'true'
-      working-directory: samples/msal-react-samples/${{ matrix.sample }}
-      run: |
-        npm run install:local
-        npm install
 
     - name: Build ${{ matrix.sample }}
       working-directory: samples/msal-react-samples/${{ matrix.sample }}
