--- a/.github/workflows/typedoc.yml
+++ b/.github/workflows/typedoc.yml
@@ -23,10 +23,10 @@ jobs:
 
       - name: Use Node.js
         uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
       - name: Install
-        env:
-          RUNNING_NODE_CI: 1
         run: npm ci
 
       - name: Build
