--- a/extensions/msal-node-extensions/package.json
+++ b/extensions/msal-node-extensions/package.json
@@ -27,11 +27,9 @@
     "compile": "node-gyp rebuild",
     "clean": "shx rm -rf dist bin",
     "build": "npm run clean && rollup -c --strictDeprecations --bundleConfigAsCjs && node ./scripts/buildBinaries.js",
-    "build:common": "cd ../../lib/msal-common && npm run build",
-    "build:all": "npm run build:common && npm run build",
+    "build:all": "cd ../.. && npm run build --workspace=@azure/msal-common --workspace=@azure/msal-node-extensions",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "link:localDeps": "npx lerna@6 bootstrap --scope @azure/msal-common --scope @azure/msal-node-extensions",
     "lint": "cd ../../ && npm run lint:node:extensions",
     "lint:fix": "npm run lint -- -- --fix",
     "prepack": "npm run build:all && node ./scripts/checkBinaries.js"
