--- a/samples/msal-node-samples/ElectronSystemBrowserTestApp/package.json
+++ b/samples/msal-node-samples/ElectronSystemBrowserTestApp/package.json
@@ -8,8 +8,7 @@
         "build": "tsc",
         "start": "electron-forge start",
         "package": "electron-forge package",
-        "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
-        "install:local": "npm install ../../../lib/msal-common && npm install ../../../lib/msal-node",
+        "build:package": "cd ../../.. && npm run build:all --workspace=lib/msal-node",
         "make": "electron-forge make",
         "publish": "electron-forge publish",
         "lint": "eslint --ext .ts,.tsx .",
@@ -54,7 +53,8 @@
         "ts-jest": "^29.1.0",
         "ts-loader": "^9.2.2",
         "ts-node": "^10.0.0",
-        "typescript": "~4.5.4"
+        "typescript": "~4.5.4",
+        "e2e-test-utils": "file:../../e2eTestUtils"
     },
     "dependencies": {
         "@azure/msal-node": "^2.0.0-beta.0",
