--- a/samples/msal-node-samples/b2c-user-flows/package.json
+++ b/samples/msal-node-samples/b2c-user-flows/package.json
@@ -8,8 +8,7 @@
     "start": "node ./index.js",
     "test": "jest",
     "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
-    "start:build": "npm run build:package && npm start",
-    "install:local": "npm install ../../../lib/msal-node"
+    "start:build": "npm run build:package && npm start"
   },
   "author": "Microsoft",
   "license": "MIT",
