--- a/samples/msal-node-samples/refresh-token/package.json
+++ b/samples/msal-node-samples/refresh-token/package.json
@@ -6,8 +6,7 @@
     "scripts": {
         "start:msal": "node ./msalApp.js",
         "start:adal": "node ./adalApp.js",
-        "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build",
-        "install:local": "npm install ../../../lib/msal-node"
+        "build:package": "cd ../../../lib/msal-common && npm run build && cd ../msal-node && npm run build"
     },
     "author": "Microsoft",
     "license": "MIT",
