--- a/samples/msal-node-samples/silent-flow/package.json
+++ b/samples/msal-node-samples/silent-flow/package.json
@@ -8,12 +8,12 @@
     "start": "node index.js",
     "test": "jest",
     "test:agc": "jest --testMatch [ '**/test/**/*agc*.spec.ts' ]",
-    "install:local": "npm install ../../../lib/msal-node"
+    "build:package": "cd ../../.. && npm run build:all --workspace=lib/msal-node"
   },
   "author": "Microsoft",
   "license": "MIT",
   "dependencies": {
-    "@azure/msal-node": "^1.0.0-beta.0",
+    "@azure/msal-node": "^2.0.0-beta.0",
     "axios": "^1.4.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.5",
