--- a/samples/msal-react-samples/typescript-sample/package.json
+++ b/samples/msal-react-samples/typescript-sample/package.json
@@ -22,11 +22,9 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "build:package": "cd ../../../lib/msal-react && npm run build:all",
+        "build:package": "cd ../../../ && npm run build:all --workspace=lib/msal-react",
         "test": "jest",
-        "eject": "react-scripts eject",
-        "install:local": "npm install ../../../lib/msal-react ../../../lib/msal-react/node_modules/react ../../../lib/msal-react/node_modules/react-dom ../../../lib/msal-browser",
-        "install:published": "npm install @azure/msal-browser@latest @azure/msal-react@latest react@^18 react-dom@^18"
+        "eject": "react-scripts eject"
     },
     "browserslist": {
         "production": [
