Update @types/node in common for LTS branch

--- a/lib/msal-common/package.json
+++ b/lib/msal-common/package.json
@@ -71,6 +71,7 @@
     "tslib": "^1.10.0",
     "tslint": "^5.20.0",
     "typescript": "^3.7.5",
-    "yargs": "^17.5.1"
+    "yargs": "^17.5.1",
+    "@types/node": "^18.0.0"
   }
 }
