--- a/samples/msal-angular-v3-samples/angular-standalone-sample/tsconfig.json
+++ b/samples/msal-angular-v3-samples/angular-standalone-sample/tsconfig.json
@@ -19,9 +19,21 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "esModuleInterop": true,
     "lib": [
       "ES2022",
       "dom"
+    ],
+    "paths": {
+      "@angular/*": [
+        "./node_modules/@angular/*"
+      ],
+      "@azure/msal-angular": [
+        "../../../node_modules/@azure/msal-angular/dist"
+      ]
+    },
+    "types": [
+      "jest"
     ]
   },
   "angularCompilerOptions": {
