Add to e2e test pipeline

--- a/.github/workflows/msal-angular-e2e.yml
+++ b/.github/workflows/msal-angular-e2e.yml
@@ -38,6 +38,7 @@ jobs:
         - 'angular15-sample-app'
         - 'angular16-sample-app'
         - 'angular-b2c-sample-app'
+        - 'angular-standalone-sample'
 
     name: ${{ matrix.sample }}
 
