--- a/.github/policies/resourceManagement.yml
+++ b/.github/policies/resourceManagement.yml
@@ -59,24 +59,19 @@ configuration:
       frequencies:
       - weekday:
           day: Monday
-          time: 8:0
+          time: 8:00
       filters:
       - isOpen
       - isNotDraftPullRequest
       - isPullRequest
       - noActivitySince:
-          days: 7
+          days: 14
       - isNotLabeledWith:
           label: 'Needs: Attention :wave:'
       actions:
       - addReply:
           reply: >-
-            Reminder: The next release is scheduled for next week and this PR appears to be stale :( 
-
-
-            If changes have been requested please address feedback. 
-
-            If this PR is still a work in progress please mark as draft.
+            Reminder: This PR appears to be stale. If this PR is still a work in progress please mark as draft.
       - addLabel:
           label: 'Needs: Attention :wave:'
     eventResponderTasks:
@@ -228,5 +223,42 @@ configuration:
           primary: True
           secondary: False
       description: 
+    - if:
+      - payloadType: Issue_Comment
+      - isOpen
+      - activitySenderHasAssociation:
+          association: Member
+      - hasLabel:
+          label: 'Needs: Attention :wave:'
+      then:
+        - removeLabel:
+            label: 'Needs: Attention :wave:'
+        - addLabel:
+            label: 'Needs: Author Feedback'
+      description: "Removes the 'Needs: Attention :wave:' label and adds the 'Needs: Author Feedback' label when a team member comments on an issue"
+    - if:
+      - payloadType: Issue_Comment
+      - isOpen
+      - isActivitySender:
+          issueAuthor: true
+      - hasLabel:
+          label: 'Needs: Author Feedback'
+      then:
+        - removeLabel:
+            label: 'Needs: Author Feedback'
+        - addLabel:
+            label: 'Needs: Attention :wave:'
+      description: "Removes the 'Needs: Author Feedback' label and adds the 'Needs: Attention :wave:' label when the issue author comments on an issue"
+    - if:
+      - payloadType: Issue_Comment
+      - not: isOpen
+      - isActivitySender:
+          issueAuthor: true
+      then:
+        - addLabel:
+            label: 'Needs: Attention :wave:'
+        - reopenIssue
+      description: "If author comments on closed issue, reopen"
+
 onFailure: 
 onSuccess: 
