- Pin lerna to v6 for msal-node-e2e.yml.

--- a/.github/workflows/msal-node-e2e.yml
+++ b/.github/workflows/msal-node-e2e.yml
@@ -65,7 +65,7 @@ jobs:
       run: npm ci --ignore-scripts
 
     - name: Link local packages
-      run: npx lerna --scope @azure/msal-node --scope @azure/msal-common bootstrap
+      run: npx lerna@6 --scope @azure/msal-node --scope @azure/msal-common bootstrap
 
     - name: Build Package
       working-directory: samples/msal-node-samples
