Use exports field and prefer ESM (#6194)
`exports` is the modern way to define what our libraries export and is
supported in all the environments we need to support. This updates our
package.json files to use the `exports` field and default to the ESM
builds.

More documentation
[here](https://nodejs.org/api/packages.html#packages_package_entry_points)
and [here](https://webpack.js.org/guides/package-exports/)

--- a/lib/msal-node/package.json
+++ b/lib/msal-node/package.json
@@ -20,8 +20,19 @@
     "msal",
     "oauth"
   ],
-  "main": "dist/index.js",
+  "type": "module",
+  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "module": "./dist/index.esm.js",
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.js",
+      "default": "./dist/index.esm.js"
+    },
+    "./package.json": "./package.json"
+  },
   "files": [
     "dist"
   ],
@@ -45,7 +56,6 @@
       "major"
     ]
   },
-  "module": "dist/index.esm.js",
   "devDependencies": {
     "@microsoft/api-extractor": "^7.19.4",
     "@rollup/plugin-node-resolve": "^15.0.1",
