--- a/lib/msal-common/package.json
+++ b/lib/msal-common/package.json
@@ -22,9 +22,18 @@
     "oauth"
   ],
   "sideEffects": false,
-  "main": "./dist/index.cjs.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "module": "./dist/index.js",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs.js",
+      "default": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "engines": {
     "node": ">=0.8.0"
   },
