Add format check to CI

--- a/.github/workflows/ci-template.yml
+++ b/.github/workflows/ci-template.yml
@@ -55,6 +55,10 @@ jobs:
       working-directory: ${{ inputs.path }}/${{ inputs.lib-name }}
       run: npm run lint
 
+    - name: Check Formatting
+      working-directory: ${{ inputs.path }}/${{ inputs.lib-name }}
+      run: npm run format:check
+
     - name: Install Keyring on Linux
       if: inputs.os == 'ubuntu-latest' && inputs.path == 'extensions'
       run: |
