--- a/.github/workflows/client-credential.yml
+++ b/.github/workflows/client-credential.yml
@@ -3,6 +3,7 @@ on:
     pull_request:
         types: [opened, reopened, synchronize, ready_for_review]
         paths:
+            - "regression-tests/msal-node/client-credential/*"
             - "lib/msal-node/**/*"
             - "lib/msal-common/**/*"
             - "!**.md"
