--- a/.github/workflows/client-credential.yml
+++ b/.github/workflows/client-credential.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - name: Run benchmark
-        run: cd examples/benchmarkjs && npm install && node bench.js | tee output.txt
+        run: cd regression-tests/msal-node/client-credential && npm install && node bench.js | tee output.txt
 
       - name: Download previous benchmark data
         uses: actions/cache@v3
