--- a/.github/workflows/client-credential.yml
+++ b/.github/workflows/client-credential.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - name: Run benchmark
-        run: cd regression-tests/msal-node/client-credential && npm install && node bench.js | tee output.txt
+        run: cd regression-tests/msal-node/client-credential && npm install && node index.js | tee output.txt
 
       - name: Download previous benchmark data
         uses: actions/cache@v3
@@ -36,7 +36,7 @@ jobs:
           name: Benchmark.js Benchmark
           tool: 'benchmarkjs'
           output-file-path: regression-tests/msal-node/client-credential/output.txt
-          external-data-json-path: ./cache/benchmark-data.json
+          external-data-json-path: ./cache/client-credential-benchmark-data.json
           github-token: ${{ secrets.GITHUB_TOKEN }}
           # Show alert with commit comment on detecting possible performance regression
           alert-threshold: '10%'
