removed fake regression

--- a/.github/workflows/client-credential.yml
+++ b/.github/workflows/client-credential.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
         with:
-          name: Benchmark.js Benchmark
+          name: msal-node client-credential Regression Test
           tool: 'benchmarkjs'
           output-file-path: regression-tests/msal-node/client-credential/output.txt
           external-data-json-path: ./cache/client-credential-benchmark-data.json
