Update certificate-credentials.md (#6275)

--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -29,11 +29,7 @@
     "node": ">=10"
   },
   "beachball": {
-    "disallowedChangeTypes": [
-      "patch",
-      "minor",
-      "major"
-    ]
+    "disallowedChangeTypes": []
   },
   "scripts": {
     "build": "rollup -c --strictDeprecations --bundleConfigAsCjs",
