--- a/lib/msal-node/package.json
+++ b/lib/msal-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/msal-node",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0",
   "author": {
     "name": "Microsoft",
     "email": "nugetaad@microsoft.com",
@@ -71,7 +71,7 @@
     "yargs": "^17.3.1"
   },
   "dependencies": {
-    "@azure/msal-common": "14.0.0-beta.1",
+    "@azure/msal-common": "14.0.0",
     "jsonwebtoken": "^9.0.0",
     "uuid": "^8.3.0"
   },
