--- a/lib/msal-common/package.json
+++ b/lib/msal-common/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/AzureAD/microsoft-authentication-library-for-js.git"
   },
-  "version": "14.0.0-beta.1",
+  "version": "14.0.0",
   "description": "Microsoft Authentication Library for js",
   "keywords": [
     "implicit",
@@ -61,11 +61,7 @@
     "format:fix": "npx prettier --ignore-path .gitignore --write src test"
   },
   "beachball": {
-    "disallowedChangeTypes": [
-      "patch",
-      "minor",
-      "major"
-    ]
+    "disallowedChangeTypes": []
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
