Implemented GitHub Feedback

--- a/.github/workflows/client-credential.yml
+++ b/.github/workflows/client-credential.yml
@@ -1,5 +1,8 @@
 name: msal-node client-credential Regression Test
 on:
+    # Allows manual triggering of workflow
+    workflow_dispatch:
+
     pull_request:
         types: [opened, reopened, synchronize, ready_for_review]
         paths:
@@ -8,6 +11,7 @@ on:
             - "lib/msal-common/**/*"
             - "!**.md"
             - ".github/workflows/client-credential.yml"
+            
     merge_group:
         types: [checks_requested]
 
@@ -39,7 +43,7 @@ jobs:
           external-data-json-path: ./cache/client-credential-benchmark-data.json
           github-token: ${{ secrets.GITHUB_TOKEN }}
           # Show alert with commit comment on detecting possible performance regression
-          alert-threshold: '10%'
+          alert-threshold: '110%'
           comment-on-alert: true
           fail-on-alert: false
           alert-comment-cc-users: '@bgavrilMS @robbie-microsoft'
