--- a/samples/msal-node-samples/ElectronTestApp/tsconfig.json
+++ b/samples/msal-node-samples/ElectronTestApp/tsconfig.json
@@ -7,7 +7,8 @@
         "sourceMap": true,
         "removeComments": false,
         "outDir": "dist",
-        "noImplicitReturns": true
+        "noImplicitReturns": true,
+        "types": []
     },
     "include": [
         "./src/**/*"
