--- a/lib/msal-browser/package.json
+++ b/lib/msal-browser/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/AzureAD/microsoft-authentication-library-for-js.git"
   },
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Microsoft Authentication Library for js",
   "keywords": [
     "implicit",
@@ -39,7 +39,9 @@
     "node": ">=0.8.0"
   },
   "beachball": {
-    "disallowedChangeTypes": ["major"]
+    "disallowedChangeTypes": [
+      "major"
+    ]
   },
   "directories": {
     "test": "test"
@@ -96,6 +98,6 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@azure/msal-common": "14.0.0"
+    "@azure/msal-common": "14.0.1"
   }
 }
