--- a/lib/msal-angular/package.json
+++ b/lib/msal-angular/package.json
@@ -27,8 +27,8 @@
     "deploy": "npm run build:all:prod && npm publish ./dist --workspaces=false",
     "test": "ng test",
     "test:coverage": "npm test",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "npm run lint -- --fix",
     "e2e": "ng e2e",
     "prepack": "npm run build:all",
     "prepublishOnly": "echo Use npm run deploy && exit 1",
