--- a/lib/msal-react/package.json
+++ b/lib/msal-react/package.json
@@ -37,8 +37,8 @@
     "build:modules:watch": "rollup -cw --bundleConfigAsCjs",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
+    "lint": "eslint src --ext .ts --ext .tsx",
+    "lint:fix": "npm run lint -- --fix",
     "build:all": "cd ../.. && npm run build --workspace=@azure/msal-common --workspace=@azure/msal-browser --workspace=@azure/msal-react",
     "prepack": "npm run build:all",
     "format:check": "npx prettier --ignore-path .gitignore --check src test",
