--- a/samples/e2eTestUtils/package.json
+++ b/samples/e2eTestUtils/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "license": "MIT",
     "private": true,
+    "main": "src/index.ts",
     "dependencies": {
         "@azure/identity": "^3.1.2",
         "@azure/keyvault-secrets": "^4.3.0",
@@ -17,8 +18,8 @@
         "playwright-core": "^1.31.1",
         "puppeteer": "^20.9.0",
         "jest": "^29.5.0",
-        "@azure/msal-browser": "^3.0.0-beta.0",
-        "@azure/msal-common": "^14.0.0-beta.0",
-        "@azure/msal-node": "^2.0.0-beta.0"
+        "@azure/msal-browser": "^3.0.0",
+        "@azure/msal-common": "^14.0.0",
+        "@azure/msal-node": "^2.0.0"
     }
 }
