--- a/samples/msal-angular-v3-samples/angular-standalone-sample/package.json
+++ b/samples/msal-angular-v3-samples/angular-standalone-sample/package.json
@@ -34,7 +34,7 @@
     "@angular/compiler-cli": "^16.1.5",
     "@types/jasmine": "~4.3.0",
     "@types/jest": "^29.5.0",
-    "e2e-test-utils": "file:../../e2eTestUtils",
+    "e2e-test-utils": "^0.0.1",
     "jasmine-core": "~4.5.0",
     "jest": "^29.5.0",
     "karma": "~6.4.0",
