--- a/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
+++ b/samples/msal-browser-samples/VanillaJSTestApp2.0/package.json
@@ -20,7 +20,7 @@
     "@types/express": "^4.17.3",
     "@types/jest": "^29.5.0",
     "@types/morgan": "^1.9.0",
-    "e2e-test-utils": "file:../../e2eTestUtils",
+    "e2e-test-utils": "^0.0.1",
     "jest": "^29.5.0",
     "jose": "^2.0.2",
     "ts-jest": "^29.1.0",
