--- a/samples/msal-node-samples/b2c-user-flows/package.json
+++ b/samples/msal-node-samples/b2c-user-flows/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
-    "e2e-test-utils": "file:../../e2eTestUtils",
+    "e2e-test-utils": "^0.0.1",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0"
   }
