- Add 1p e2e performance telemetry pipeline.

--- a/.pipelines/1p-e2e-performance-telemetry-sample.yml
+++ b/.pipelines/1p-e2e-performance-telemetry-sample.yml
@@ -3,6 +3,9 @@ trigger: none # Disable push triggers
 pr:
 - dev
 
+pool:
+  vmImage: ubuntu-latest
+
 steps:
 - task: NodeTool@0
   displayName: 'Install Node.js'
