More MSAL Node updates

--- a/samples/msal-node-samples/refresh-token/package.json
+++ b/samples/msal-node-samples/refresh-token/package.json
@@ -17,5 +17,8 @@
         "express": "^4.17.1",
         "express-session": "^1.17.2",
         "underscore": "^1.13.3"
+    },
+    "devDependencies": {
+        "dotenv": "^16.3.1"
     }
 }
