--- a/samples/msal-node-samples/username-password-cca/package.json
+++ b/samples/msal-node-samples/username-password-cca/package.json
@@ -13,5 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "@azure/msal-node": "^2.1.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
