--- a/lib/msal-browser/package.json
+++ b/lib/msal-browser/package.json
@@ -86,6 +86,7 @@
     "@types/sinon": "^7.5.0",
     "dotenv": "^8.2.0",
     "eslint-config-msal": "^0.0.0",
+    "msal-test-utils": "^0.0.1",
     "fake-indexeddb": "^3.1.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
